@@ -1,9 +1,10 @@
 package io.mosip.mimoto.service.impl;
 
-
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.mosip.mimoto.dto.IssuerDTO;
+import io.mosip.mimoto.dto.IssuerV2DTO;
 import io.mosip.mimoto.dto.IssuersDTO;
+import io.mosip.mimoto.dto.IssuersV2DTO;
 import io.mosip.mimoto.dto.mimoto.*;
 import io.mosip.mimoto.exception.*;
 import io.mosip.mimoto.service.IssuersService;
@@ -12,12 +13,12 @@ import io.mosip.mimoto.util.Utilities;
 import jakarta.validation.constraints.NotBlank;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang.StringUtils;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
 
 import java.io.IOException;
+import java.util.List;
 import java.util.stream.Collectors;
 
 
@@ -26,14 +27,17 @@ import java.util.stream.Collectors;
 @Validated
 public class IssuersServiceImpl implements IssuersService {
 
-    @Autowired
-    private Utilities utilities;
+    private final Utilities utilities;
 
-    @Autowired
-    private ObjectMapper objectMapper;
+    private final ObjectMapper objectMapper;
 
-    @Autowired
-    private IssuerConfigUtil issuersConfigUtil;
+    private final IssuerConfigUtil issuersConfigUtil;
+
+    public IssuersServiceImpl(Utilities utilities, ObjectMapper objectMapper, IssuerConfigUtil issuersConfigUtil) {
+        this.utilities = utilities;
+        this.objectMapper = objectMapper;
+        this.issuersConfigUtil = issuersConfigUtil;
+    }
 
     @Override
     @Cacheable(value = "issuersConfig", key = "#p0 ?: 'allIssuersConfig'")
@@ -46,7 +50,7 @@ public class IssuersServiceImpl implements IssuersService {
     }
 
     @Override
-    public IssuerDTO getIssuerDetails(String issuerId) throws ApiNotAccessibleException, IOException, AuthorizationServerWellknownResponseException, InvalidWellknownResponseException {
+    public IssuerDTO getIssuerDetails(String issuerId) throws ApiNotAccessibleException, IOException {
         IssuersDTO issuersDTO = getAllIssuers();
         issuersDTO = getAllEnabledIssuers(issuersDTO);
 
@@ -88,8 +92,13 @@ public class IssuersServiceImpl implements IssuersService {
 
     @Override
     public CredentialIssuerConfiguration getIssuerConfiguration(String issuerId) throws ApiNotAccessibleException, IOException, AuthorizationServerWellknownResponseException, InvalidWellknownResponseException {
-        CredentialIssuerWellKnownResponse credentialIssuerWellKnownResponse = issuersConfigUtil.getIssuerWellknown(getIssuerDetails(issuerId).getCredential_issuer_host());
-        AuthorizationServerWellKnownResponse authorizationServerWellKnownResponse = issuersConfigUtil.getAuthServerWellknown(credentialIssuerWellKnownResponse.getAuthorizationServers().get(0));
+        String credentialIssuerHost = getIssuerDetails(issuerId).getCredential_issuer_host();
+        CredentialIssuerWellKnownResponse credentialIssuerWellKnownResponse = issuersConfigUtil.getIssuerWellknown(credentialIssuerHost);
+
+        if(credentialIssuerWellKnownResponse.getAuthorizationServers() == null || credentialIssuerWellKnownResponse.getAuthorizationServers().isEmpty()) {
+            credentialIssuerWellKnownResponse.setAuthorizationServers(List.of(credentialIssuerHost));
+        }
+        AuthorizationServerWellKnownResponse authorizationServerWellKnownResponse = issuersConfigUtil.getAuthServerWellknown(credentialIssuerWellKnownResponse.getAuthorizationServers().getFirst());
 
         return new CredentialIssuerConfiguration(
                 credentialIssuerWellKnownResponse.getCredentialIssuer(),
@@ -118,5 +127,38 @@ public class IssuersServiceImpl implements IssuersService {
             }
             throw new ApiNotAccessibleException("Unable to fetch issuer configuration for issuerId: " + issuerId, e);
         }
+    }
+
+    @Override
+    public IssuersV2DTO getIssuersV2DTO() throws ApiNotAccessibleException, IOException {
+        IssuersDTO issuersDTO = getIssuers(null);
+        List<IssuerV2DTO> list = issuersDTO.getIssuers().parallelStream().map(this::toIssuerV2DTO).collect(Collectors.toList());
+        return new IssuersV2DTO(list);
+    }
+
+    @Override
+    public IssuerV2DTO getIssuerV2Details(String issuerId) throws ApiNotAccessibleException, IOException {
+        IssuerDTO issuerDTO = getIssuerDetails(issuerId);
+        return toIssuerV2DTO(issuerDTO);
+    }
+
+    /**
+     * Maps an {@link IssuerDTO} (from config) to {@link IssuerV2DTO} (API response).
+     */
+    private IssuerV2DTO toIssuerV2DTO(IssuerDTO issuer) {
+
+        IssuerV2DTO issuerV2DTO= new  IssuerV2DTO();
+
+        issuerV2DTO.setIssuerId(issuer.getIssuer_id());
+        issuerV2DTO.setProtocol(issuer.getProtocol());
+        issuerV2DTO.setDisplay(issuer.getDisplay());
+        issuerV2DTO.setClientId(issuer.getClient_id());
+        issuerV2DTO.setTokenEndpoint(issuer.getToken_endpoint());
+        issuerV2DTO.setClientAlias(issuer.getClient_alias());
+        issuerV2DTO.setQrCodeType(issuer.getQr_code_type());
+        issuerV2DTO.setEnabled(issuer.getEnabled());
+        issuerV2DTO.setCredentialIssuerHost(issuer.getCredential_issuer_host());
+
+        return issuerV2DTO;
     }
 }
